<resources>
    <string name="app_name">food ordering app</string>
    <string name="search_foods_and_kitchen">Search foods and Kitchen</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="login">Login</string>
    <string name="not_yet_registered">Not yet registered?</string>
    <string name="signup_now">SignUp Now</string>
    <string name="signup_to_your_account">signup to your account</string>
    <string name="username_or_email_id">Username or email id</string>
    <string name="password1">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="are_you_register">Are You register?</string>
    <string name="login1">Login</string>
    <string name="add">Add</string>
    <string name="_129">₹129</string>
    <string name="_120">₹120</string>
    <string name="product_name_2">Product Name 2</string>
    <string name="add1">Add</string>
    <string name="_99">₹99</string>
    <string name="product_name_1">Product Name 1</string>
    <string name="burger">Burger</string>
    <string name="password2">Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_otp">Send OTP</string>
    <string name="_6_digit_code">6-digit code</string>
    <string name="set_new_password">Set New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="username1">Username</string>
    <string name="username2">Username</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="_01_june_2017">01 June 2017</string>
    <string name="member_since">Member Since</string>
    <string name="dot">••••••••••••</string>
    <string name="change">Change</string>
    <string name="my_cart">My Cart</string>
    <string name="item_total_37_100">Item Total: ₹ 37.100</string>
    <string name="tax_2_0">Tax: ₹ 2.0</string>
    <string name="delivery_services_10_0">Delivery Services: ₹ 10.0</string>
    <string name="total_49_100">Total: ₹ 49.100</string>
    <string name="checkout">Checkout</string>
    <string name="pizza">Pizza</string>
    <string name="dash">−</string>
    <string name="_2">2</string>
    <string name="pluse">+</string>
    <string name="_198">_198</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="wendy_s_burger">Wendy\'s Burger</string>
    <string name="_29_99">₹ 29.99</string>
    <string name="_4_9">4.9</string>
    <string name="delivery_to">Delivery To</string>
    <string name="banasree_b_block">Banasree, B-Block</string>
    <string name="_0">0</string>
    <string name="pav_bhaji">Pav Bhaji</string>
    <string name="momo">Momo</string>
    <string name="cake">Cake</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="my_order">My Order</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="payable_amount_0_00">Payable Amount: ₹0.00</string>
    <string name="pay_now">Pay Now</string>
    <string name="select_languge">select languge</string>
    <string name="submit">Submit</string>
    <string name="search_foods_and_kitchen1">search foods and kitchen</string>
</resources>