<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:text="@string/set_new_password"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/newPasswordInput"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/resetPasswordBtn"
        android:text="@string/reset_password"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
