<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/intro_pic"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/custom_edittext"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp"
                android:background="@color/white">


                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_your_account"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/icons8_person"
                    android:drawablePadding="8dp"
                    android:hint="@string/username"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/icons8_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textColorHighlight="@color/cardview_dark_background" />
                <TextView
                    android:id="@+id/Forgottext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColorHint="@color/blue_grey"
                    android:textAlignment="textEnd"
                    android:paddingVertical="5dp"
                    android:textColor="@color/blue_grey"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="2dp"
                    android:backgroundTint="@color/red"
                    android:textColor="@color/white"
                    android:text="@string/login"
                    android:textSize="18sp"
                    app:cornerRadius="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/signupText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:padding="8dp"
                        android:text="@string/not_yet_registered"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/signupbotton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:padding="8dp"
                        android:text="@string/signup_now"
                        android:textAlignment="center"
                        android:textColor="@color/red"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</RelativeLayout>
