<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:background="@color/orange"
            android:onClick="goBackToHomepage"
            android:src="@drawable/ic_back"
            app:tint="@android:color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

    <TextView
        android:text="@string/forgot_password"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/sendOtpBtn"
        android:text="@string/send_otp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:layout_height="wrap_content"/>
</LinearLayout>

</LinearLayout>